# AW-Monitor

./: CLAUDE.md  README.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/audit/: models.py  router.py  service.py
backend/app/auth/: jwt.py  models.py  passwords.py  rbac.py  router.py  schemas.py  service.py
backend/app/config_store/: defaults.py  encryption.py  models.py  router.py  schemas.py  service.py
backend/app/core/: config.py  database.py  middleware.py
backend/app/ingestion/: express_client.py  file_query.py  models.py  router.py  schemas.py  service.py
backend/app/monitoring/: models.py  probes.py  router.py  scheduler.py  schemas.py  service.py  websocket.py
backend/app/scripts/: fix_config.py  seed_admin.py  seed_pcs.py  set_smb_creds.py
backend/app/users/: router.py  schemas.py  service.py
backend/migrations/: alembic.ini  env.py
backend/migrations/versions/: f25fcaff9537_initial_schema.py
backend/tests/auth/: test_jwt.py  test_passwords.py  test_rbac.py  test_service.py
backend/tests/config_store/: test_encryption.py
backend/tests/ingestion/: test_service.py
backend/tests/monitoring/: test_probes.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  providers.tsx
frontend/components/: data-table.tsx  health-grid.tsx  pc-slide-over.tsx  pc-tile.tsx  sidebar.tsx  status-badge.tsx  topbar.tsx  trend-sparkline.tsx
frontend/hooks/: use-auth.ts  use-health-stream.ts
frontend/lib/: api.ts  types.ts  utils.ts
(+14 files in other folders)
